styles.css
/* GENERAL */

img.money-symbol-image {

	position: relative;
	top: 3px;

}

div.monetary-notification {

	display: block !important;
	
}

div.monetary-notification-content p {

	line-height: 20px;

}

span#monetary-hide-update {

	cursor: pointer;
	text-decoration: underline;
	font-weight: bold;

}

/* END GENERAL */

/* BANK */

div#bank-overview-wrapper {

	display: table;

}

div#bank-coin-image {

	float: left;
	
}

div#bank-overview-inner {

	display: table-cell;
	vertical-align: middle;
	width: 100%;

}

div#bank-overview-details {

	float: right;
	margin-right: 50px;
	margin-top: -10px;

}

span#bank-overview-details-money {

	font-size: 24px;
	font-weight: bold;

}

span#bank-overview-details-account-number, span#bank-overview-details-sort-code {

	font-size: 9px;
	
}

div#bank-controls {

	float: left;
	margin-left: 60px;

}

div#bank-error {

	height: 30px;
	
}

div#bank-error span {

	color: red;
	display: none;
	font-size: 11px;

}

div#bank-controls-buttons-wrapper {

	line-height: 24px;
	
}

div#bank-controls-buttons-wrapper input {

	width: 100px;
	border: 1px solid;

}

div#bank-controls-buttons-wrapper a {

	border-top-left-radius: 0px; 
	border-bottom-left-radius: 0px;
	margin-right: 50px;
	position: relative;
	left: -7px;
	
}

table#bank-transaction-list {

	width: 100%;
	padding: 0px;
	text-align: left;

}

tr#bank-transaction-list-headers th {

	width: 20%;
	text-align: left;

}

tr.bank-transaction-list-row {

	font-size: 10px;
	height: 25px;

}

tr#bank-transaction-list-headers-dotted {

	border-top: 1px dotted;
	height: 5px;
	
}

tr.bank-transaction-list-spacer {

	height: 5px;
	
}

tr.bank-transaction-list-spacer td {

	border-top: 1px solid;
	
}

/* END BANK */

/* STOCK */

div#stock-invest-content {

	text-align: center;
	padding: 10px;

}

div#stock-invest-content table {

	width: 100%;

}

div#stock-invest-content table tr.stock-invest-content-headers {

	border-bottom: 1px solid;

}

div#stock-invest-content table tr th, div#stock-invest-content table tr td {

	text-align: left;

}

tr.stock-invest-content-row td {

	padding: 6px;

}

tr.stock-invest-content-headers th {

	padding-left: 6px;

}

div#stock-wrapper {

	padding: 10px;
	text-align: center; 

}

div#stock-content {

	overflow: hidden;
	text-align: center;
	
}

div#stock-content-strip {

	position: relative;
	left: 0px;
	width: 15000px;
	height: 100%;

}

div.stock-block {

	float: left;
	width: 908px;
	height: 100%;

}

div.stock-block-header {

	border-bottom: 2px solid; 
	font-size: 18px; 
	padding: 5px;

}

table.stock-block-table-left, table.stock-block-table-center, table.stock-block-table-right {

	float: left;
	margin-top: 15px;

}

table.stock-block-table-left, table.stock-block-table-center {

	margin-right: 20px;

}

table.stock-block-table-left, table.stock-block-table-right {

	width: 32%;

}

table.stock-block-table-center {

	width: 31%;
	
}

td.stock-block-cell-right, td.stock-block-cell-left {

	padding: 5px;
	border-bottom: 1px solid;

}

td.stock-block-cell-left {

	text-align: left;

}

td.stock-block-cell-right {

	text-align: right;
	font-weight: bold;

}

div.stock-block-chart {

	margin-top: 10px;
	text-align: center;
	border: 1px solid;
	padding: 5px;

}

span.stock-market-loss {

	color: red;

}

span.stock-market-profit {

	color: blue;

}

/* END STOCK */

